--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 			{
 
-				$(this).animate({width:"400px",marginLeft:"60px",marginTop:"100px",display:"none"}, 2000);		
+				$(this).animate({width:"400px",height:"200px",marginLeft:"60px"}, 2000);		
 
 			})
 
