--- a/index.html
+++ b/index.html
@@ -9,17 +9,6 @@
 
 		</script>
 
-		<style>
-
-			#circle{height:100px;width:100px;border-radius:50%;background-color:red;margin:10px;}
-
-			.square{height:100px;width:100px;;background-color:green;margin:10px;}
-			
-			p{display:none;}			
-	
-		</style>
-
-
 	</head>
 
 	<body>
@@ -29,7 +18,7 @@
 		<script type = "text/javascript">
 
 
-			$.ajax("ajax.txt").done(function(data))
+			$.ajax("ajax.txt").done(function(data)
 
 			{
 
@@ -39,7 +28,7 @@
 
 			{
 
-				alert("Could not get data")
+				alert("Could not get data");
 			
 			});
 
