--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<script type = "text/javascript">
 
 
-			$.ajax("ajax.txt").done(function(data)
+			$.ajax("ajax.text").done(function(data)
 
 			{
 
