--- a/javascript.html
+++ b/javascript.html
@@ -19,7 +19,7 @@
 
 		
 
-		<p>Click on the boxes and circles as quickly as you can and f shubham!</p>
+		<p>Click on the boxes and circles as quickly as you can</p>
 
 		<p><b>Your time :</b> <span id = "timetaken"></span></p>
 		
